2017-04-03  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (check): finished the new world tab
	validation.

	* src/client/LocalTest.cpp (check): implement the basic layout.

	* src/client/LocalTest.cpp (keyPressed): override GameState function
	to call check().
	* src/client/LocalTest.hpp (check): enw function to test if we need
	to enable Play button.

2017-04-02  Jérôme Pasquier  <rainbru@free.fr>

	* README.md: add buidl instructions using git submodule.

	* CMakeLists.txt (rainbrurpg-tests): add librlgl to
	target_link_libraries rule.
	* CMakeLists.txt (rainbrurpg-client): add librlgl to
	target_link_libraries rule.
	* src/client/LocalTest.cpp (randomSeed): uses RLGL::Seed to get
	a random seed.
	* CMakeLists.txt (include_directories): add librlgl sources.

	* CMakeLists.txt (ROOTDIR): add macro definition to build rlgl.
	* CMakeLists.txt (include): include enw submodule.
	* ext/librlgl: add new submodule.

	* ROADMAP: postponed the LocalTest shutdown bug.

2017-03-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/MainMenu.cpp (exit): now call destroyRootWindow to
	avoid event error on reload.

	* src/client/MainMenu.cpp (logoCreated): avoid creating the logo
	geometry buffer twice.

	* src/client/LocalTest.cpp (onBack): go back to MainMenu.
	* src/client/GameEngine.cpp (toMainMenu): go back from Localest.

2017-03-30  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (keyReleased): send event to cuurent
	gamestate.
	* src/client/GameEngine.cpp (keyPressed): send event to cuurent
	gamestate.
	* src/client/GameState.cpp: implement empty key related functions.

	* src/client/GameEngine.cpp (keyPressed): fix the textbox handling bug.

2017-03-29  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (frameStarted): inject time to CEGUI.

	* src/client/LocalTest.cpp (enter): add randomSeed handler to layout's
	random button.
	* src/client/LocalTest.cpp (randomSeed): randomly update textbox.
