@@ -1,4 +1,10 @@
+2017-04-04  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/LocalTest.cpp (check): add a selection brush image.
+
 2017-04-03  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/LocalTest.cpp (check): add a list box item.
 
 	* src/client/LocalTest.cpp (check): finished the new world tab
 	validation.
